# lab_yoyaku

./: .gitignore  .npmrc  README.md  auth.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
.github/: pull_request_template.md
.github/workflows/: bootstrap-db.yml  ci.yml  fix-db-from-vercel.yml  manual-direct-db-push.yml  migrate.yml  patch-db-from-vercel.yml  prisma-deploy.yml  refresh-lock.yml
api/: pyproject.toml
api/app/: main.py  rules.py
api/app/schemas/: __init__.py  auth.py  check.py  rules.py
api/tests/: test_rules.py
codex/: auth-debug.md
docs/: OPERATIONS.md
infra/: docker-compose.yml
scripts/: check-auth-imports.mjs  codex-db-bootstrap.sh  codex-preflight.cjs  codex-sync-db-default.cjs  fix-stuck-migration.cjs  migrate-deploy.cjs  migrate-deploy.fallback.ts  migrate-deploy.ts  preboot-hotfix.cjs
scripts/db/: init-apply-neon.sh
scripts/sql/: hotfix_add_device_updatedAt.sql  mark_auth_normalization_applied.sql
tools/tsx-shim/: package.json
web/: .env.example  .env.local  .gitignore  README.md  auth.runtime.ts  auth.ts  init.sql  middleware.ts  next.config.mjs  package.json  package.json.bak  postcss.config.js  tailwind.config.js  tailwind.config.ts  tsconfig.json  vercel.json
web/docs/: db-ops.md  db-sync-attempt.md  production-db-push-attempt.md
web/prisma/: schema.prisma
web/scripts/: assert-endpoints-match.ts  assert-env.ts  db-push-direct.ts  ensure-admin.ts  fix-db-from-vercel.sh  patch-db-from-vercel.sh  set-database-url.ps1  set-database-url.sh
web/src/: auth.config.ts  auth.ts  middleware.ts
(+275 files in other folders)
