[project]
name = "api"
version = "0.1.0"
description = "Lab Yoyaku API"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py310"
